--- a/index.html
+++ b/index.html
@@ -24,22 +24,26 @@
         <span class="range-value">32</span>
       </div>
 
-      <div class="includeUppercase">
+      <div class="requirements">
+        <span class="requirement-text">Include Uppercase</span>
         <input type="checkbox" id="testUpperCase" class="input"/>
         <label for="testUpperCase" class="label"></label>
       </div>
 
-      <div class="includeLowercase">
+      <div class="requirements">
+        <span class="requirement-text">Include Lowercase</span>
         <input type="checkbox" id="testLowerCase" class="input"/>
         <label for="testLowerCase" class="label"></label>
       </div>
 
-      <div class="includeNumbers">
+      <div class="requirements">
+        <span class="requirement-text">Include Numbers</span>
         <input type="checkbox" id="testNumbers" class="input"/>
         <label for="testNumbers" class="label"></label>
       </div>
 
-      <div class="includeSymbols">
+      <div class="requirements">
+        <span class="requirement-text">Include Symbols</span>
         <input type="checkbox" id="testSymbols" class="input"/>
         <label for="testSymbols" class="label"></label>
       </div>
