--- a/index.html
+++ b/index.html
@@ -26,26 +26,26 @@
 
       <div class="requirements">
         <span class="requirement-text">Include Uppercase</span>
-        <input type="checkbox" id="testUpperCase" class="input"/>
-        <label for="testUpperCase" class="label"></label>
+        <input type="checkbox" id="uppercase" class="input"/>
+        <label for="uppercase" class="label"></label>
       </div>
 
       <div class="requirements">
         <span class="requirement-text">Include Lowercase</span>
-        <input type="checkbox" id="testLowerCase" class="input"/>
-        <label for="testLowerCase" class="label"></label>
+        <input type="checkbox" id="lowercase" class="input"/>
+        <label for="lowercase" class="label"></label>
       </div>
 
       <div class="requirements">
         <span class="requirement-text">Include Numbers</span>
-        <input type="checkbox" id="testNumbers" class="input"/>
-        <label for="testNumbers" class="label"></label>
+        <input type="checkbox" id="numbers" class="input"/>
+        <label for="numbers" class="label"></label>
       </div>
 
       <div class="requirements">
         <span class="requirement-text">Include Symbols</span>
-        <input type="checkbox" id="testSymbols" class="input"/>
-        <label for="testSymbols" class="label"></label>
+        <input type="checkbox" id="symbols" class="input"/>
+        <label for="symbols" class="label"></label>
       </div>
 
       <button id="generate-button" class="button" disabled >Generate Password</button> 
